maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: not found: value random3
		 random3()
                 ^Escaper:13: error: not found: value random3
    		if(random3() == 0)
                   ^Escaper:17: error: not found: value random3
    		if(random3() == 1)
                   ^